force-app/main/default/objects/FinancialProductType__c/FinancialProductType__c.object-meta.xml
<CustomObject>
    <description>Used to indicate which fields are required for each type of product</description>
    <label>Financial Product Type</label>
    <nameField>
        <label>Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Product Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>