force-app/main/default/objects/FinancialProductType__c/fields/DefaultProvider__c.field-meta.xml
<CustomField>
    <fullName>DefaultProvider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If we know the provider of the type selected, a link to the provider should be displayed here</description>
    <label>Default provider</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Financial Product Types</relationshipLabel>
    <relationshipName>Financial_Product_Types</relationshipName>
    <type>Lookup</type>
</CustomField>