force-app/main/default/objects/FinancialProductType__c/fields/DescriptionInternal__c.field-meta.xml
<CustomField>
    <fullName>DescriptionInternal__c</fullName>
    <description>Describes the type and how it may be different to other types. Displayed to internal users when selecting a financial product type.</description>
    <label>Description (internal)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>