force-app/main/default/objects/FinancialProductType__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>To store the unique name of the financial product type name to use when identifying the type in declarative or programatic tools. This field should not change once set. Field values must be entered in UPPER_SNAKE_CASE.</description>
    <label>Developer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>