force-app/main/default/objects/FinancialProductType__c/fields/FinancialProductRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>FinancialProductRecordTypeDeveloperName__c</fullName>
    <description>Specifies the record type of the financial product record so that this can be automatically set when creating and changing financial product type</description>
    <label>Financial product record type name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>