force-app/main/default/objects/FinancialProductType__c/fields/HasAnInterestRate__c.field-meta.xml
<CustomField>
    <fullName>HasAnInterestRate__c</fullName>
    <description>Specify if related financial product can have an interest rate</description>
    <label>Has an interest rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>