force-app/main/default/objects/FinancialProductType__c/fields/HasAnIssueNumber__c.field-meta.xml
<CustomField>
    <fullName>HasAnIssueNumber__c</fullName>
    <description>Record if the related financial product can have an issue number associated. The issue number will be available so planners can look up the specifics of the account if they need to.</description>
    <label>Has an issue number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>