force-app/main/default/objects/FinancialProductType__c/fields/HasANoticePeriod__c.field-meta.xml
<CustomField>
    <fullName>HasANoticePeriod__c</fullName>
    <description>If related financial product can have a notice period. If it does, we record the notice period in days.</description>
    <label>Has a notice period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>