force-app/main/default/objects/FinancialProductType__c/fields/IsTaxable__c.field-meta.xml
<CustomField>
    <fullName>IsTaxable__c</fullName>
    <description>Is related financial product taxable? For reference only</description>
    <label>Is taxable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxable</fullName>
            </value>
            <value>
                <fullName>Non-taxable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>