force-app/main/default/objects/FinancialProductType__c/fields/LegacyRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>LegacyRecordTypeId__c</fullName>
    <description>The record type id that would correspond to a financial product of this type</description>
    <label>Legacy record type id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>