force-app/main/default/objects/FinancialProductType__c/fields/PortalName__c.field-meta.xml
<CustomField>
    <fullName>PortalName__c</fullName>
    <description>The name of this financial product as displayed to customers in the portal.</description>
    <label>Portal name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Product_Subtypes</valueSetName>
    </valueSet>
</CustomField>