force-app/main/default/objects/FinancialProductType__c/fields/RecordTypeIdFinServ__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIdFinServ__c</fullName>
    <description>The record type ID of the FinServ financial product associated with this financial product type.</description>
    <label>FinServ record type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>