force-app/main/default/objects/FinancialProductType__c/fields/RegularDay__c.field-meta.xml
<CustomField>
    <fullName>RegularDay__c</fullName>
    <description>Day of month or week / appropriate frequency in numbers</description>
    <inlineHelpText>Day of month or week / appropriate frequency in numbers</inlineHelpText>
    <label>Regular Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>