force-app/main/default/objects/FinancialProductType__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <description>Shortened name of financial product type.</description>
    <label>Short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>