force-app/main/default/objects/FinancialProductType__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>Used to determine the order in which types should appear in tables/picklists etc.</description>
    <label>Sort order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>