force-app/main/default/objects/FinancialProductType__c/fields/TransactionTaxRelief__c.field-meta.xml
<CustomField>
    <fullName>TransactionTaxRelief__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if tax relief is expected on contributions to an own product</description>
    <label>Transaction Tax Relief</label>
    <type>Checkbox</type>
</CustomField>