force-app/main/default/objects/FinancialProductType__c/fields/TriggersInformationRequest__c.field-meta.xml
<CustomField>
    <fullName>TriggersInformationRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether information requests will get kicked off for this Financial Product Type</description>
    <inlineHelpText>Whether information requests will get kicked off for this Financial Product Type</inlineHelpText>
    <label>Triggers information request</label>
    <type>Checkbox</type>
</CustomField>