force-app/main/default/objects/FinancialProductType__c/fields/UnknownType__c.field-meta.xml
<CustomField>
    <fullName>UnknownType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies that this type appears as an &#39;I don&#39;t know&#39; in the portal and must be confirmed and converted to another financial product type during data gathering</description>
    <label>Unknown type</label>
    <type>Checkbox</type>
</CustomField>