force-app/main/default/objects/FinancialProductType__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>MaximumAge__c</columns>
    <columns>MinimumAge__c</columns>
    <columns>HasAFixedTerm__c</columns>
    <columns>HasAnInterestRate__c</columns>
    <columns>HasAnIssueNumber__c</columns>
    <columns>Status__c</columns>
    <columns>DefaultProvider__c</columns>
    <columns>SortOrder__c</columns>
    <columns>DeveloperName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>